# PROJECT-X

./: .gitignore  CMakeLists.txt  README.md  mahros.tasks  main.cpp  start.cpp
lib/: Animation.h  Console.h  Constants.h  File.h  Formatting.h  drawings.h  getpass.h  loginSys.h  start.h
libararies/: drawings.h  getpass.h
src/: Animation.cpp  Console.cpp  File.cpp  Formatting.cpp  drawings.cpp  getpass.cpp  loginSys.cpp  start.cpp
